<resources>
    <string name="app_name">Amor em Movimento</string>

    <!-- Google Sign-In: Web Client ID do Google Cloud Console -->
    <string name="google_web_client_id" translatable="false">487621614650-ekd8795v6uu6ac2uco886h95f09lrta4.apps.googleusercontent.com</string>

    <string name="titulo_calendario">Calendário</string>
    <string name="botao_novo_evento">Novo Evento</string>
    <string name="texto_data_nao_selecionada">Nenhuma data selecionada</string>

    <string name="menu_calendario">Calendário</string>
    <string name="menu_eventos">Eventos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_contato">Contato</string>

    <string name="botao_inscrever">Inscrever-se</string>
    
    <!-- Feed strings -->
    <string name="titulo_feed">Novidades</string>
    <string name="botao_ver_detalhes">Ver detalhes</string>
    <string name="feed_vazio">Nenhuma novidade no momento</string>
    <string name="feed_carregando">Carregando novidades...</string>
    <string name="feed_erro">Erro ao carregar novidades</string>
    <string name="menu_feed">Feed</string>
    
    <!-- Post item strings -->
    <string name="post_titulo_placeholder">Título do Post</string>
    <string name="post_descricao_placeholder">Descrição do post com informações importantes sobre a campanha ou projeto da ONG...</string>
    <string name="post_data_placeholder">15/11/2025</string>
    <string name="post_local_placeholder">Local do evento</string>
    <string name="icone_data">📅</string>
    <string name="icone_local">📍</string>
</resources>